@@ -1,3 +1,4 @@
+* Manage same input and storage location
 * Check pending shipment to erase party
 * Define how inventory non filled lines are managed
 * Do not fill inventory quantity automatically
